# paimon

./: .asf.yaml  .envrc  .gitignore  .scalafmt.conf  AGENTS.md  CHAIN_TABLE_IMPLEMENTATION_PLAN.md  DISCLAIMER  LICENSE  NOTICE  Notes  PR-7595-sort-compact-commit-plan.md  README.md  SECURITY.md  csv_format_demo.md  debug_test.java  pom.xml  sort-compact-online-test-manual.md
paimon-python/: MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
paimon-python/dev/: .rat-excludes  auto-check.sh  cfg.ini  check-licensing.sh  check_license_header.py  fix_license_header.py  license-template.txt  lint-python.sh  requirements-dev.txt  requirements.txt  run_mixed_tests.sh
paimon-python/pypaimon/: __init__.py  orphan_files_clean.py  orphan_files_clean_example.py
paimon-python/pypaimon/acceptance/: __init__.py  incremental_diff_acceptance_test.py
paimon-python/pypaimon/api/: __init__.py  api_request.py  api_response.py  api_resquest.py  auth.py  catalog.py  catalog_factory.py  client.py  commit_message.py  config.py  core_options.py  data_types.py  database.py  identifier.py  options.py  path.py  predicate.py  read_builder.py  resource_paths.py  rest_api.py  rest_exception.py  rest_json.py  rest_util.py  row_type.py  schema.py  split.py  table.py  table_commit.py  table_read.py  table_scan.py  table_schema.py  table_write.py  token_loader.py  typedef.py  write_builder.py
paimon-python/pypaimon/benchmark/: clickbench_format.py  hdfs_io_bench.py
paimon-python/pypaimon/branch/: __init__.py  branch_manager.py  catalog_branch_manager.py  filesystem_branch_manager.py
paimon-python/pypaimon/casting/: data_type_casts.py  row_to_string.py
paimon-python/pypaimon/catalog/: __init__.py  catalog.py  catalog_context.py  catalog_environment.py  catalog_exception.py  catalog_factory.py  catalog_loader.py  catalog_snapshot_commit.py  catalog_utils.py  database.py  filesystem_catalog.py  filesystem_catalog_loader.py  jdbc_catalog.py  jdbc_catalog_loader.py  property_change.py  renaming_snapshot_commit.py  snapshot_commit.py  table_metadata.py  table_query_auth.py  table_rollback.py
paimon-python/pypaimon/changelog/: __init__.py  changelog.py  changelog_manager.py
paimon-python/pypaimon/cli/: __init__.py  cli.py  cli_branch.py  cli_catalog.py  cli_db.py  cli_sql.py  cli_table.py  cli_table_stream.py  cli_tag.py  main.py  tail.py  utils.py  where_parser.py
paimon-python/pypaimon/common/: config.py  core_options.py  dataclasses.py  delta_varint_compressor.py  external_path_provider.py  file_io.py  identifier.py  json_util.py  lock.py  map_blob_key_serializer.py  memory_size.py  merge_engine_dispatch.py  predicate.py  predicate_builder.py  predicate_json_parser.py  pyarrow_compat.py  range.py  rest_json.py  time_utils.py  uri_reader.py  user_agent.py  where_parser.py
paimon-python/pypaimon/compact/: __init__.py  compact_action.py  compact_builder.py  compact_coordinator.py  compact_executor.py  compact_manager.py  compact_strategy.py  compact_task.py  levels.py  options.py  partition_predicate.py  table_level_file_scanner.py  table_level_task_generator.py
paimon-python/pypaimon/consumer/: __init__.py  consumer.py  consumer_manager.py
paimon-python/pypaimon/daft/: __init__.py  daft_blob.py  daft_blob_read.py  daft_catalog.py  daft_compat.py  daft_datasink.py  daft_datasource.py  daft_explain.py  daft_io_config.py  daft_paimon.py  daft_predicate_visitor.py
paimon-python/pypaimon/data/: __init__.py  _variant_binary.py  decimal.py  generic_variant.py  timestamp.py  variant_shredding.py
paimon-python/pypaimon/deletionvectors/: __init__.py  apply_deletion_vector_reader.py  bitmap_deletion_vector.py  deletion_vector.py
paimon-python/pypaimon/fileindex/: __init__.py  bloom_filter.py  fast_hash.py  file_index_format.py  file_index_predicate.py  file_index_result.py
paimon-python/pypaimon/filesystem/: _kerberos.py  caching_file_io.py  hdfs_native_file_io.py  jindo_file_system_handler.py  local.py  local_file_io.py  pvfs.py  pvfs_config.py  pyarrow_file_io.py  resolving_file_io.py
paimon-python/pypaimon/function/: __init__.py  builtins.py  function.py  function_change.py  function_definition.py
paimon-python/pypaimon/globalindex/: __init__.py  batch_vector_search.py  block_compression.py  build_plan.py  create_global_index.py  data_evolution_batch_scan.py  data_evolution_global_index_coverage.py  data_evolution_global_index_scanner.py  drop_global_index.py  full_text_query.py  full_text_search.py  global_index_coverage.py  global_index_evaluator.py  global_index_meta.py  global_index_reader.py  global_index_result.py  global_index_scan_builder.py  global_index_scan_builder_impl.py  global_index_scanner.py  global_index_unindexed_rows_scanner.py  index_file_utils.py  indexed_split.py  key_serializer.py  memory_slice_input.py  offset_global_index_reader.py  range.py  result_entry.py  roaring_bitmap.py  sorted_file_global_index_reader.py  sorted_file_meta_selector.py  sorted_index_file_meta.py  union_global_index_reader.py  vector_search.py  vector_search_result.py
paimon-python/pypaimon/index/: deletion_vector_meta.py  dynamic_bucket.py  index_file_handler.py  index_file_meta.py
paimon-python/pypaimon/manifest/: __init__.py  fastavro_py36_compat.py  fastavro_zstd_py36_fix.py  index_manifest_entry.py  index_manifest_file.py  manifest_file_manager.py  manifest_file_merger.py  manifest_list_manager.py  simple_stats_evolution.py  simple_stats_evolutions.py
paimon-python/pypaimon/ml/: __init__.py  monitoring.py
paimon-python/pypaimon/multimodal/: __init__.py  blob_read.py  blob_store.py  connection.py  query.py  table.py
paimon-python/pypaimon/operation/: expire_snapshots.py  repair.py  snapshot_deletion.py
paimon-python/pypaimon/options/: expire_config.py
paimon-python/pypaimon/partition/: __init__.py  partition_expire.py  partition_expire_strategy.py  partition_time_extractor.py
paimon-python/pypaimon/pvfs/: __init__.py
paimon-python/pypaimon/ray/: __init__.py  bucket_join.py  data_evolution_merge_into.py  data_evolution_merge_join.py  data_evolution_merge_transform.py  (+7 more)
(+13794 files in other folders)
