################################################################################
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
################################################################################

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pypaimon"
version = "1.5.dev"
description = "Apache Paimon Python API"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Apache Software Foundation", email = "dev@paimon.apache.org"},
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cachetools>=5,<6",
    "fastavro>=1.4,<2",
    'fsspec>=2021.10,<2026; python_version<"3.8"',
    'fsspec>=2023,<2026; python_version>="3.8"',
    "packaging>=21,<26",
    'pandas>=1.3,<3; python_version < "3.9"',
    'pandas>=1.5,<3; python_version >= "3.9"',
    'polars>=0.9,<1; python_version<"3.8"',
    'polars>=1,<2; python_version>="3.8"',
    'pyarrow>=6,<7; python_version < "3.8"',
    'pyarrow>=16,<20; python_version >= "3.8"',
    'pyroaring<=0.4.5; python_version == "3.7"',
    'pyroaring>=1.0.0; python_version >= "3.8"',
    "readerwriterlock>=1,<2",
    "zstandard>=0.19,<1",
    'backports.zstd>=1.0.0,<1.4.0; python_version >= "3.9" and python_version < "3.14"',
    "cramjam>=1.3.0,<3",
    "pyyaml>=5.4,<7",
    "requests>=2.21.0,<3",
]

[project.optional-dependencies]
ray = [
    "ray>=2.10,<3",
]
torch = [
    "torch",
]
daft = [
    'daft>=0.7.6; python_version>="3.10"',
]
oss = [
    'ossfs>=2021.8; python_version<"3.8"',
    'ossfs>=2023; python_version>="3.8"',
]
jindo = [
    "pyjindosdk>=6.10.4",
]
lance = [
    'pylance>=0.20,<1; python_version>="3.9"',
    'pylance>=0.10,<1; python_version>="3.8" and python_version<"3.9"',
]
vortex = [
    'vortex-data==0.70.0; python_version>="3.11"',
]
lumina = [
    "lumina-data>=0.1.0",
]
sql = [
    'pypaimon-rust; python_version>="3.10"',
    'datafusion>=52; python_version>="3.10"',
]

[dependency-groups]
dev = [
    "duckdb==1.3.2",
    "build>=1,<2",
    "flake8==4.0.1",
    "pytest~=7.0",
    # Ray: 2.48+ has no wheel for Python 3.8; use 2.10.0 on 3.8, 2.48.0 on 3.9+
    "ray>=2.10.0",
    "requests",
    "parameterized",
    # Vortex 0.71.0 regresses native predicate pushdown on single-row files.
    'vortex-data==0.70.0; python_version >= "3.11"',
    # Lumina vector search (optional, for lumina index tests)
    "lumina-data>=0.1.0",
]

[project.scripts]
paimon = "pypaimon.cli:main"

[project.urls]
Homepage = "https://paimon.apache.org"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pypaimon*"]
exclude = ["pypaimon.tests*"]
